samples/_failures_safe/1761437669_1b9d9e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_49775b76.c: In function ‘tokenize’:
./samples/SAFE/__tmp_49775b76.c:187:51: error: expected ‘)’ at end of input
  187 |         } else if (parse_identifier(&input, &token
      |                                    ~              ^
      |                                                   )
./samples/SAFE/__tmp_49775b76.c:187:9: error: expected declaration or statement at end of input
  187 |         } else if (parse_identifier(&input, &token
      |         ^
./samples/SAFE/__tmp_49775b76.c:187:9: error: expected declaration or statement at end of input
